<resources>
    <string name="app_name">P77S2120222RRJA</string>
    <string name="txt_escuela">Tecnologico de Estudios Superiores Oriente del Estado de Mexico</string>
    <string name="txt_alumno">Jonathan Alejandro Rodriguez Rodriguez</string>
    <string name="txt_grupo">7s21</string>
    <string name="txt_envio">Envio</string>
    <string name="btn_nativo">NATIVO</string>
    <string name="btn_objeto">OBJETO</string>
    <string name="txt_dato">Dato a enviar</string>
    <string name="btn_regresar">Regresar</string>
    <string name="def">Default</string>
    <string name="nombre">Nombre</string>
    <string name="edad">Edad</string>
</resources>