<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".principal">

    <TextView
        android:id="@+id/txt_escuela"
        android:layout_width="234dp"
        android:layout_height="74dp"
        android:layout_marginTop="104dp"
        android:text="@string/txt_escuela"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="293dp"
        android:layout_height="68dp"
        android:contentDescription="@string/txt_escuela"
        app:layout_constraintBottom_toTopOf="@+id/txt_escuela"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/tesoem"
        tools:ignore="ImageContrastCheck,ImageContrastCheck" />

    <TextView
        android:id="@+id/txt_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/txt_alumno"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_escuela" />

    <TextView
        android:id="@+id/txt_grupo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_grupo"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_error"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_nombre" />
</androidx.constraintlayout.widget.ConstraintLayout>